# test

./: README.md
.github/workflows/: build-db-migration.yaml  build-images.yaml  build-prompt-gemini.yaml  build-prompt-history.yaml  deploy-datadog.yaml  deploy-db-migration.yaml  deploy-prompt-gemini.yaml  deploy-prompt-history.yaml  pages.yaml  terraform-auto-apply.yaml  terraform-plan-apply.yaml  terraform-plan.yaml
.github/workflows_eks/: build-db-migration.yaml  deploy-datadog.yaml  deploy-prompt-gemini.yaml  terraform-destroy.yaml
devops/helm/datadog/: values.yaml
devops/helm/db-migration/: Chart.yaml  values.yaml
devops/helm/db-migration/templates/: job.yaml
devops/helm/prompt-gemini/: Chart.yaml  values.yaml
devops/helm/prompt-gemini/templates/: deployment.yaml  service.yaml
devops/helm/prompt-history/: Chart.yaml  values.yaml
devops/helm/prompt-history/templates/: deployment.yaml  service.yaml
devops/scripts/: diagram.py
devops/terraform/: .terraform.lock.hcl  datadog.tf  eks.tf  locals.tf  networking.tf  providers.tf  rds.tf  variables.tf
devops/terraform_serverless/: datasources.tf  ecr.tf  google_sheet_db.tf  lambda.tf  outputs.tf  providers.tf  variables.tf
frontend/: index.html
microservices/db-migration/: Dockerfile
microservices/db-migration/sql/: V1__init.sql
microservices/prompt-gemini/: Dockerfile  main.py  pyproject.toml
microservices/prompt-generator/: Cargo.toml  Dockerfile
microservices/prompt-generator/src/: main.rs
microservices/prompt-history/: Dockerfile  go.mod  go.sum  main.go
